--- a/style.css
+++ b/style.css
@@ -17,7 +17,8 @@ li a {
     text-align: center;
     padding: 14px 16px;
 }
-.mainport {
+
+.mainindex { 
     font-family: Arial, Helvetica, sans-serif;
     background-color: #ffffff;
     width: 500px;
@@ -25,14 +26,8 @@ li a {
     height: 410px;
     border-color: #dddddd;
     margin: auto;
-    border-style: solid;
     margin-left: auto;
-
-
-
 }
-
-
 .Name {
     float: left;
 }
@@ -42,12 +37,13 @@ li a {
     padding-left: 900px
 }
 
-.footer {
-    clear: both;
-    padding: 20px;
+.Footer {
+    margin: 10px ;
     background-color: #777777;
-    
+    text-align: center;
+
 }
+
 h2 {
     clear: both;
     padding: 20px;
@@ -55,7 +51,6 @@ h2 {
 
 
 p {
-    text-align: right;
     margin-top: 100px;
     margin-bottom: 100px;
     margin-right: 150px;
@@ -67,6 +62,8 @@ p {
     overflow: auto;
 }
 
-{
-
+body {
+    margin: 0;
+    padding: 0;
 }
+
